# focusmate

./: .gitignore  DB_CONNECTION_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_READINESS.md  DEVELOPMENT_STATUS.md  INTEGRATION_GUIDE.md  LICENSE  PICU_REUSABLE_CONCEPTS.md  README.md  SETUP_GUIDE.md  SMART_SESSION_CRISIS_REPORT.md  VERCEL_DEPLOYMENT_ISSUES.md  debug_timer_state.py  dump.rdb  llms.txt  pomodoro.py  scp_test.txt  scp_test_2.txt  test_asyncpg.py  vercel.json
backend/: .env.example  .env.production.example  .gitignore  .nas-sync-test  Dockerfile  QUICK_FIX.md  README.md  alembic.ini  check_test_data.py  debug_import.py  deploy-nas.sh  docker-compose.monitoring.yml  docker-compose.nas.yml  docker-compose.prod.yml  docker-compose.yml  localDB_dev_run.sh  main.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  start-nas.sh  stop-nas.sh  test_websocket.html
backend/alembic/versions/: add_friend_tables.py  add_refresh_tokens.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/middleware/: file_encryption.py  rate_limit.py  request_logging.py  security_headers.py  slow_request.py
backend/app/api/utils/: websocket_auth.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  exceptions.py  logging_config.py  notify.py  rbac.py  security.py
backend/app/domain/achievement/: schemas.py  service.py
backend/app/domain/chat/: __init__.py  invitation_service.py  schemas.py  service.py  settings_schemas.py
backend/app/domain/community/: schemas.py  service.py
backend/app/domain/friend/: __init__.py  presence_service.py  schemas.py  service.py
backend/app/domain/matching/: __init__.py  optimized_service.py  proposal_schemas.py  proposal_service.py  schemas.py  service.py
backend/app/domain/messaging/: schemas.py  service.py
backend/app/domain/notification/: notification_helper.py  schemas.py  service.py
backend/app/domain/participant/: schemas.py  service.py
backend/app/domain/ranking/: __init__.py  schemas.py  service.py
backend/app/domain/report/: schemas.py  service.py
backend/app/domain/room/: schemas.py  service.py
backend/app/domain/room_chat/: __init__.py  schemas.py  service.py
backend/app/domain/room_reservation/: schemas.py  service.py
backend/app/domain/settings/: schemas.py  service.py
backend/app/domain/stats/: schemas.py  service.py
backend/app/domain/timer/: schemas.py  service.py
backend/app/domain/todo/: models.py  schemas.py  service.py
backend/app/domain/user/: schemas.py  service.py
backend/app/services/: chat_file_upload.py  email_service.py  notification_service.py
backend/docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  ENTERPRISE_NOTIFICATION_SYSTEM.md  FILE_ENCRYPTION_SETUP.md  LIGHTWEIGHT_ROOM_CHAT.md  MIDDLEWARE.md  OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  QUICK_FIX.md  S3_SMTP_CONFIGURATION.md  SEED_DATA.md  SMART_SESSION.md  STATS_API.md  SUPABASE_CONNECTION_GUIDE.md  SUPABASE_SETUP.md  TEST_RESULTS.md  TROUBLESHOOTING.md
backend/docs/examples/: API_QUICK_REFERENCE.md  BACKEND_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md
backend/monitoring/prometheus/: alert_rules.yml  prometheus.yml
backend/nginx/: Dockerfile  nginx.conf
backend/scripts/: README.md  benchmark_matching.py  check_supabase_connection.py  cleanup_duplicate_teams.py  cleanup_duplicates.sql  create_tables.py  fix-python.sh  fix-python38-types.py  fix_user_schema.sql  format-migration.py  nas_diagnostics.py  seed_comprehensive.py  seed_data.py  seed_simple.py  seed_simple_admin.py  setup.sh  setup_supabase.py  smart_migrate.py  test.sh  test_smtp.py
backend/scripts/archive/: check_supabase_connection.py  check_user_columns.py  check_user_table.py  cleanup_duplicate_teams.py  setup_supabase.py
backend/scripts/automation/: architect_agent.sh  codex_architect_agent.sh  gemini_architect_agent.sh
backend/scripts/database/: check_alembic_db.py  check_existing_tables.py  check_locks.py  check_migration_status.py  check_performance.py  create_performance_indexes.py  create_performance_indexes.sql  create_tables.py  exhaustive_lock_check.py  kill_sessions.py  seed_comprehensive.py  smart_migrate.py  supabase_hardening.sql  test_sync_conn.py  test_sync_version.py  verify_database.py
backend/scripts/deployment/: check_webhook_setup.sh  deploy-nas.sh  github-webhook-listener.py  shutdown-nas-docker.sh  start-webhook-listener.sh  startup-nas-docker.sh
backend/scripts/docs/: database_verification_report.md  production_readiness_check.md
backend/scripts/legacy/: stop-nas.sh
backend/scripts/monitoring/: auto_debug_watcher.py  daily_health_report.py  log_alerter.py  nas_monitor.sh  webhook-health-check.sh
backend/scripts/tools/: check_db_standalone.py  fix-python.sh  format-migration.py
backend/scripts/verification/: test.sh  verify_ranking_logic.py
backend/tests/: README.md  __init__.py  conftest.py  stress_test_notifications.py  test_tracker.py
backend/tests/benchmark/: locustfile.py
backend/tests/e2e/: test_api_integration.py  test_basic_e2e.py  test_user_workflow.py
backend/tests/integration/: test_chat_api.py  test_chat_api_fixed.py  test_community_notification.py  test_db_connection.py  test_friend_features.py  test_friend_notification.py  test_matching_notification.py  test_message_notification.py  test_migrations.py  test_simple_friend_request.py  test_websocket_quick.py  test_websocket_resilience.py  test_websocket_simple.py
backend/tests/performance/: README_N1_TESTS.md  benchmark_matching.py  test_api_performance.py  test_matching_performance.py  test_n_plus_one.py
backend/tests/security/: test_security.py
backend/tests/unit/: test_achievement_service.py  test_chat_repository.py  test_chat_service.py  test_circuit_breaker.py  test_community_service.py  test_encrypted_file_upload.py  test_encryption.py  test_matching_service.py  test_ranking_notifications.py  test_ranking_service.py  test_rbac.py  test_room_service.py  test_verification_service.py
backend/tests/utils/: __init__.py  query_counter.py
docs/: README.md  (+20 more)
(+553 files in other folders)
